@@ -1,4 +1,8 @@
 2011-05-08  Robert Larice
+ * src/frontend/help/x11disp.c :
+    cleanup Xt usage
+
+2011-05-08  Robert Larice
  * xgraph/alloc.c :
     rename macros public and private  -->  PUBLIC and PRIVATE
 
